# src/modules/khuyen_mai/dto/update-khuyen_mai.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateKhuyenMaiDto } from './create-khuyen_mai.dto';
+
+export class UpdateKhuyenMaiDto extends PartialType(CreateKhuyenMaiDto) {}
